Fix spacing between filter chips and clear all button and order of number comparators (#674)
* Fix spacing between filter chips and clear all button

Fixes #672

* Change order of number comparators

Fixes #640

* Remove camel casing from string conditions

Fixes #677

--- a/sass/px-data-grid-filters-preview.scss
+++ b/sass/px-data-grid-filters-preview.scss
@@ -13,3 +13,13 @@ px-popover {
 px-chip {
   --px-chip-max-width: none;
 }
+
+.filter-entity-chip {
+  margin-right: 5px;
+}
+
+.clear-all-filters {
+  margin-left: 5px;
+}
+
+
